[tiptap] fix: footer toolbar overflow (#4156)

--- a/packages/ricos-editor/web/statics/styles/footer-toolbar.scss
+++ b/packages/ricos-editor/web/statics/styles/footer-toolbar.scss
@@ -3,6 +3,5 @@
 .footerToolbar {
   bottom: 0px;
   position: fixed;
-  width: 100%;
   margin-top: var(--ricos-custom-footer-toolbar-margin-top, 60px);
 }
